xxx, S3QL 0.12

  * fsck.s3ql has been even more optimized.
  
  * Fixed a problem with running out of file descriptors when lots of
    objects are deleted.
    
  * Bucket encryption passwords can now also be stored in
    the ~/.s3ql/authinfo file.
   
  * mount.s3ql doesn't complain any more if it receives any of the standard
    mount(8) mount options.
  
  
2010-04-24, S3QL 0.11

  * S3QL file system can now be mounted from /etc/fstab
  
  * Metadata now takes significantly less space.
  
  * Files with extended attributes can now be deleted.
  
  * Extended attributes can now be listed.
  
  * It is now possible to choose between zlib, BZip2 and LZMA compression
    every time the file system is mounted.
  
  * Added contrib/benchmark.py to find out optimal compression method
    for given network bandwidth.

  * fsck.s3ql no longer uses mknod(3) , since that lead to errors on e.g.
    NFS mounted volumes under Fedora. 
    
  * File access, modification and inode change times before 1972 are
    now supported.
  
  * Fixed a deadlock when removing or overwriting files.
  
2010-04-21, S3QL 0.10

  * S3QL now depends on FUSE version 2.8

  * Cached blocks are now flushed to the backend as soon as they have not
    been accessed for more than 10 seconds.

  * The setup script now automatically checks and, if necessary, installs
    the Python module dependencies.
    
  * mkfs.s3ql now creates compressed and encrypted file systems by default.

  * Data is now compressed with LZMA instead of Bzip2.
  
  * Data compression and data upload is now done in parallel, so the full network
    can bandwidth is continuously without breaks for data compression.

  * fsck.s3ql is now several orders of magnitude faster. The code has been
    optimized and some special database indices are now precalculated.

  * When running cp.s3ql, the attributes of the target directory are
    now immediately refreshed (so that e.g. ls immediately shows the